@@ -255,11 +255,26 @@ void AriaPrintable::printPage(const int pageNum, wxDC& dc,
     dc.SetTextForeground( wxColour(0,0,0) );
     dc.DrawText( label, title_x, y0 );
     
-    dc.SetFont( m_normal_font );
     
     // ---- draw tempo
+    dc.SetFont( m_subtitle_font );
+    const int tempo_x = 100;
+    const int tempo_y = y0 + m_title_font_height + MARGIN_UNDER_PAGE_HEADER/3;
+    wxPoint tempoHeadLocation(tempo_x, tempo_y);
     
+    dc.SetPen(  wxPen( wxColour(0,0,0), 12 ) );
+    dc.SetBrush( *wxBLACK_BRUSH );
+    EditorPrintable::drawNoteHead(dc, tempoHeadLocation, false /* not hollow head */);
     
+    const Sequence* seq = m_seq->getSequence();
+    const int tempo = seq->getTempo();
+    dc.DrawText( wxString::Format(wxT(" = %i"), tempo),
+                 tempo_x+HEAD_RADIUS*2,
+                 tempo_y+HEAD_RADIUS-m_subtitle_font_height );
+    
+    //FIXME: don't hardcode values
+    dc.DrawLine( tempo_x + HEAD_RADIUS - 8, tempo_y - 10, tempo_x + HEAD_RADIUS - 8, tempo_y-150 );
+
     // ---- get usable area (some area at the top is reserved to the title) 
     const float notation_area_h  = getUsableAreaHeight(pageNum);
     const float notation_area_y0 = y0 + MARGIN_UNDER_PAGE_HEADER +
@@ -270,6 +285,7 @@ void AriaPrintable::printPage(const int pageNum, wxDC& dc,
     
     ASSERT_E(notation_area_y0 + notation_area_h, <=, y1);
 
+    dc.SetFont( m_normal_font );
     m_seq->printLinesInArea(dc, page, notation_area_y0, notation_area_h, h, x0, x1);
     
 }
